REGRESSION(102234): 2-3% layout regression https://bugs.webkit.org/show_bug.cgi?id=74141

Reviewed by David Hyatt.

Don't allocate a RuleSet when there are no regions.

* css/CSSStyleSelector.cpp:
(WebCore::CSSStyleSelector::initForRegionStyling):

Canonical link: https://commits.webkit.org/90880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@102479 268f45cc-cd09-0410-ab3c-d52691b4dbfc